# tps-diffusion-model

./: .gitignore  .gitmodules  PROJECT_DESCRIPTION.md  README.md  THIRD_PARTY_NOTICES.md  environment.yml  mek1_fzc_wdsm_data.npz  motivation.txt  outputs  pyproject.toml  run_opes_tps.py
.cursor/plans/: tps_for_boltz-2_diffusion_17d677d5.plan.md
cofolding_tps_out/: coords_trajectory.npz  shooting_log.txt  trajectory_summary.json
cofolding_tps_out/cv_rmsd_analysis/: rmsd_results.json
cofolding_tps_out/cv_rmsd_analysis_live/: rmsd_results_live.json
cofolding_tps_out/prody_analysis/: prody_terminal_summary.json
cofolding_tps_out/trajectory_checkpoints/: last_frame_only.npz  tps_mc_step_00000010.npz  tps_mc_step_00000020.npz  tps_mc_step_00000030.npz  tps_mc_step_00000040.npz  tps_mc_step_00000050.npz  tps_mc_step_00000060.npz  tps_mc_step_00000070.npz  tps_mc_step_00000080.npz  tps_mc_step_00000090.npz  tps_mc_step_00000100.npz  tps_mc_step_00000110.npz  tps_mc_step_00000120.npz  tps_mc_step_00000130.npz  tps_mc_step_00000140.npz  tps_mc_step_00000150.npz  tps_mc_step_00000160.npz  tps_mc_step_00000170.npz  tps_mc_step_00000180.npz  tps_mc_step_00000190.npz  tps_mc_step_00000200.npz  tps_mc_step_00000210.npz  tps_mc_step_00000220.npz  tps_mc_step_00000230.npz  tps_mc_step_00000240.npz  tps_mc_step_00000250.npz  tps_mc_step_00000260.npz  tps_mc_step_00000270.npz  tps_mc_step_00000280.npz  tps_mc_step_00000290.npz  tps_mc_step_00000300.npz  tps_mc_step_00000310.npz  tps_mc_step_00000320.npz  tps_mc_step_00000330.npz  tps_mc_step_00000340.npz  tps_mc_step_00000350.npz  tps_mc_step_00000360.npz  tps_mc_step_00000370.npz  tps_mc_step_00000380.npz  tps_mc_step_00000390.npz  (+440 more)
cofolding_tps_out_fixed/: coords_trajectory.npz  shooting_log.txt  trajectory_summary.json
cofolding_tps_out_fixed/cv_rmsd_analysis/: rmsd_results.json
cofolding_tps_out_fixed/prody_analysis/: prody_terminal_summary.json
cofolding_tps_out_new/: shooting_log.txt
conf/: config.yaml
conf/evaluation/: default.yaml
docs/: atlas_boltz_finetuning.md  cover_letter_natcomputsci_bc.tex  evaluation_metrics.md  oneopes_openmm_design.md  paper_tps_generative_models.aux  paper_tps_generative_models.out  paper_tps_generative_models.tex  paper_tps_generative_models_SI.tex  paper_tps_natcomputsci_bc.tex  paper_tps_natcomputsci_bc_SI.tex  posebusters_opes_cv.md  runs_n_poses_reproduction.md  si_macros.tex  si_refs.bib  tps_diffusion_theory.aux  tps_diffusion_theory.out  tps_diffusion_theory.tex  vendor_openpathsampling.md
examples/: auto_end_to_end.py  auto_md_replicas.py  auto_monitor.py  auto_pipeline.py  auto_train.py  cofolding_multimer_msa_empty.yaml  monitor_progress.py  orchestrator.py
fes_rl_precomputed/: training_log.csv  training_summary.json
opes_tps_mek1_fzc/: cv_values.json  opes_state_final.json  opes_tps_summary.json
opes_tps_mek1_fzc_500/: cv_values.json  opes_state_final.json  opes_tps_summary.json
opes_tps_out/: cv_values.json  opes_state_final.json  opes_tps_summary.json  shooting_log.txt
opes_tps_out_case1/: cv_values.json  opes_state_final.json  opes_tps_summary.json  shooting_log.txt  tps_steps.jsonl
opes_tps_out_case1_2d/: cv_summary.json  cv_values.json  shooting_log.txt  tps_steps.jsonl
opes_tps_out_case1_busters/: cv_values.json  shooting_log.txt  tps_steps.jsonl
opes_tps_out_case2/: shooting_log.txt
opes_wdsm_fresh/: opes_state_final.json
papers/: README_sources.md  Untitled
results/: comparison_report.json  evaluation_report.json  opes_tps_summary.json  opes_wdsm_10k_r3_summary.json  opes_wdsm_10k_r4_summary.json  opes_wdsm_10k_r5_summary.json  opes_wdsm_10k_r6_summary.json  opes_wdsm_10k_summary.json  shooting_log.txt  tps_steps.jsonl  training_summary.json
rl_boltz_v2/: training_log.csv  training_summary.json
rl_boltz_v3_gradfixed/: training_log.csv  training_summary.json
scripts/: analyze_terminal_ensemble_prody.py  assemble_basin_figure.py  assemble_wdsm_dataset.py  auto_end_to_end.py  auto_md_replicas.py  auto_monitor.py  auto_pipeline.py  auto_train.py  build_plumed_opes.sh  compare_models.py  compute_cv_rmsd.py  download_runs_n_poses_zenodo.py  evaluate_wdsm_model.py  evaluation_dashboard.py  export_opes_basin_frames.py  export_opes_tps_dataset.py  extract_last_frames.py  extract_zenodo_runs_n_poses.py  install_torch_cuda.sh  orchestrator.py  plot_opes_fes.py  render_tps_checkpoint_cartoons.py  run_cofolding_tps_demo.py  run_openmm_oneopes_repex.py  run_openmm_opes_md.py  run_opes_tps.py  run_skrinjar_full_similarity_batch.py  run_tilted_tps.py  run_tps_boltz.py  run_umbrella_tps.py  split_wdsm_dataset.py  summarize_opes_2d_cv.py  train_bidirectional_fes_boltz.py  train_fes_guided_boltz.py  train_fes_rl_precomputed.py  train_rl_boltz.py  train_weighted_dsm.py  validate_enhanced_sampling.py  visualize_cofolding_trajectory.py  watch_rmsd_live.py
tests/: __init__.py  conftest.py  mock_boltz_diffusion.py  pdb_fixtures.py  test_atlas_client.py  test_atlas_convert.py  test_atlas_finetune_cli.py  test_backward_shooting_ergodic.py  test_benchmark_prot_no_msa_tps.py  test_bfloat16_inference.py  test_binding_site_touching_atoms.py  test_boltz2_trunk.py  test_boltz_ligand_pose.py  test_boltz_npz_coords_frame.py  test_boltz_utils.py  test_checkpoint_npz.py  test_compute_cvs_mask.py  test_compute_device.py  test_cv_diagnostics.py  test_cv_rmsd.py  test_default_boltz_cache_dir.py  test_distribution_metrics.py  test_docs_jmlr_article_latexmk.py  test_dual_mode_integration.py  test_ensemble_atlas.py  test_exact_jacobian.py  test_exponential_tilting.py  test_export_opes_basin_frames.py  test_fes_guided_rl.py  test_geometric_idp_cvs.py  test_gpu_core_device_propagation.py  test_gpu_util_csv_logger.py  test_hydration_site_inference.py  test_import_smoke.py  test_interaction_fingerprints.py  test_ligand_torsions.py  test_multi_protein_dataset.py  test_multi_protein_trainer.py  test_n_fixed_point.py  test_nd_opes_bias.py  (+37 more)
wdsm_correct_smoke/: training_log.csv  training_summary.json
wdsm_smoke/: training_log.csv  training_summary.json
weights/: README.md
(+4449 files in other folders)
