[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "genai-tps"
version = "0.1.0"
description = "Path sampling (TPS) for generative models — vendored OpenPathSampling plus optional backends (e.g. Boltz-2)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  # Vendored OpenPathSampling runtime (see openpathsampling/setup.cfg upstream)
  "future",
  "psutil",
  # Aligned with boltz submodule (numpy 2.x) and numba>=0.61.2.
  "numpy>=2.0,<2.3",
  "scipy",
  "pandas",
  "netcdf4",
  "svgwrite",
  "networkx",
  "matplotlib",
  "ujson>=4.0.2",
  "dill",
  "sqlalchemy>=1.4.1",
  "mdtraj",
]

[project.optional-dependencies]
boltz = [
  "torch>=2.2",
]
dev = [
  "pytest>=7",
  "hypothesis>=6",
]
viz = [
  # PyPI often only has pre-releases for current Python (e.g. 3.2.0a0).
  "pymol-open-source>=3.2.0a0",
]
analysis = [
  # ProDy 2.x is compatible with NumPy 2.x (tested with 2.6.1 / NumPy 2.2).
  "prody>=2.0",
]
enhanced_sampling = [
  # pymbar with JAX for GPU-accelerated MBAR (pip install pymbar[jax]).
  # For pure NumPy fallback: pip install pymbar.
  # Source: https://github.com/choderalab/pymbar
  "pymbar>=4.0",
]

[tool.setuptools.packages.find]
where = ["src/python"]
exclude = ["openpathsampling.tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/python"]
markers = [
  "cuda: test requires a CUDA device (skipped when unavailable)",
  "benchmark: regression tied to an external / upstream example (Boltz YAML)",
]
# Third-party noise during test collection: fix upstream or reinstall wheels when possible.
filterwarnings = [
  "ignore:.*enablePackrat.*:DeprecationWarning:mdtraj.core.selection",
  "ignore:numpy.ndarray size changed:RuntimeWarning",
  # SWIG-generated bindings (e.g. netCDF / OpenMM) under Python 3.12+ deprecation rules
  "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]
