[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "genai-tps"
version = "0.1.0"
description = "Path sampling (TPS) for generative models — vendored OpenPathSampling plus optional backends (e.g. Boltz-2)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  # Vendored OpenPathSampling runtime (see openpathsampling/setup.cfg upstream)
  "future",
  "psutil",
  # Aligned with boltz submodule (numpy 2.x) and numba>=0.61.2.
  "numpy>=2.0,<2.3",
  # boltz/pyproject.toml pins scipy==1.13.1 exactly; conda-forge can float to
  # 1.17.x causing ABI mismatches with openmm's compiled xtc_utils extension.
  "scipy>=1.13,<1.14",
  # Pandas 2.2.2+ supports NumPy 2.0 wheels; older pandas + numpy 2.x yields
  # import/runtime errors (https://pandas.pydata.org/docs/whatsnew/v2.2.2.html).
  "pandas>=2.2.2",
  "netcdf4",
  "svgwrite",
  "networkx",
  "matplotlib",
  "ujson>=4.0.2",
  "dill",
  "sqlalchemy>=1.4.1",
  "requests>=2.32",
  "tqdm>=4.66",
  "mdtraj",
]

[project.optional-dependencies]
profiling = [
  # NVTX Python markers for NVIDIA Nsight Systems timelines (set GENAI_TPS_NVTX=1).
  "nvtx",
]
boltz = [
  "torch>=2.2",
  # pytorch-lightning==2.5.0 (pinned by boltz) requires torchmetrics; listed
  # here so it is tracked as a direct dep and survives environment cleanup.
  "torchmetrics>=1.0",
]
dev = [
  "pytest>=7",
  "hypothesis>=6",
]
viz = [
  # PyPI often only has pre-releases for current Python (e.g. 3.2.0a0).
  "pymol-open-source>=3.2.0a0",
]
analysis = [
  # ProDy 2.x is compatible with NumPy 2.x (tested with 2.6.1 / NumPy 2.2).
  "prody>=2.0",
  # Protein-ligand interaction fingerprints (interaction_fingerprints.py).
  "prolif>=2.0",
  # RDKit: ligand torsion analysis (ligand_torsions.py), SuCOS scoring.
  # Prefer conda-forge; pip wheels available as rdkit>=2024.3.2.
  "rdkit>=2024.3.2",
]
sampling = [
  # pymbar with JAX for GPU-accelerated MBAR (pip install pymbar[jax]).
  # For pure NumPy fallback: pip install pymbar.
  # Source: https://github.com/choderalab/pymbar
  "pymbar>=4.0",
  # OpenMM stack: local-min RMSD / energy CVs, compute_cv_rmsd minimization.
  # Prefer conda-forge for openmm + CUDA plugins; pip pins keep pip-only envs working.
  "openmm>=8.0",
  "pdbfixer>=1.9",
  # GAFF2 / SMIRNOFF ligand parameterization (scripts/compute_cv_rmsd.py, cofactors).
  "openmmforcefields>=0.14",
  # Prefer conda-forge for reproducible pins; pip-only installs depend on PyPI availability.
  "openff-toolkit>=0.14.0",
  # Ligand pose quality checks for OPES (--bias-cv posebusters_*).
  "posebusters==0.6.5",
]
# Pip-only one-shot: PyMOL cartoons, ProDy ensemble analysis, OpenMM+MBAR+ligands.
# Conda users: environment.yml installs prody, pymol-open-source, openff-toolkit from conda-forge
# and uses -e .[boltz,dev,sampling] to avoid duplicate PyMOL/ProDy wheels.
full = [
  "pymol-open-source>=3.2.0a0",
  "prody>=2.0",
  "prolif>=2.0",
  "rdkit>=2024.3.2",
  "pymbar>=4.0",
  "openmm>=8.0",
  "pdbfixer>=1.9",
  "openmmforcefields>=0.14",
  "openff-toolkit>=0.14.0",
  "posebusters==0.6.5",
]
cli = [
  "typer>=0.12",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
]

[project.scripts]
genai-tps = "genai_tps.cli:main"

[tool.setuptools.packages.find]
where = ["src/python"]
exclude = ["openpathsampling.tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/python"]
markers = [
  "cuda: test requires a CUDA device (skipped when unavailable)",
  "benchmark: regression tied to an external / upstream example (Boltz YAML)",
]
# Third-party noise during test collection: fix upstream or reinstall wheels when possible.
filterwarnings = [
  "ignore:.*enablePackrat.*:DeprecationWarning:mdtraj.core.selection",
  "ignore:numpy.ndarray size changed:RuntimeWarning",
  # SWIG-generated bindings (e.g. netCDF / OpenMM) under Python 3.12+ deprecation rules
  "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]
